# HasteHealth

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  docker-services-compose.yml  rust-toolchain.toml  sonar-project.properties
backend/: Cargo.toml  release-plz.toml
backend/crates/access-control/: Cargo.toml
backend/crates/access-control/src/: lib.rs  utilities.rs
backend/crates/artifacts/: Cargo.toml
backend/crates/artifacts/src/: lib.rs  search_parameters.rs
backend/crates/cli/: Cargo.toml
backend/crates/cli/commands/: operation_build.sh  terminology_build.sh  types_build.sh
backend/crates/cli/src/: main.rs
backend/crates/codegen/: Cargo.toml
backend/crates/codegen/src/: lib.rs  traversal.rs  utilities.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: environment.rs  lib.rs
backend/crates/fhir-client/: Cargo.toml
backend/crates/fhir-client/src/: axum.rs  http.rs  lib.rs  middleware.rs  request.rs  url.rs
backend/crates/fhir-generated-ops/: Cargo.toml
backend/crates/fhir-generated-ops/src/: generated.rs  lib.rs
backend/crates/fhir-model/: Cargo.toml
backend/crates/fhir-model/benches/: serialization_bench.rs
backend/crates/fhir-model/src/: lib.rs
backend/crates/fhir-operation-error/: Cargo.toml
backend/crates/fhir-operation-error-derive/: Cargo.toml
backend/crates/fhir-operation-error-derive/src/: lib.rs
backend/crates/fhir-operation-error/src/: axum.rs  derive.rs  lib.rs
backend/crates/fhir-ops/: Cargo.toml
backend/crates/fhir-ops-derive/: Cargo.toml
backend/crates/fhir-ops-derive/src/: lib.rs
backend/crates/fhir-ops/src/: derive.rs  lib.rs
backend/crates/fhir-search/: Cargo.toml
backend/crates/fhir-search/src/: indexing_conversion.rs  lib.rs
backend/crates/fhir-serialization-json/: Cargo.toml
backend/crates/fhir-serialization-json-derive/: Cargo.toml
backend/crates/fhir-serialization-json-derive/src/: deserialize.rs  lib.rs  serialize.rs  utilities.rs
backend/crates/fhir-serialization-json/src/: derive.rs  errors.rs  lib.rs  serialize_primitives.rs
backend/crates/fhir-terminology/: Cargo.toml
backend/crates/fhir-terminology/src/: client.rs  lib.rs
backend/crates/fhirpath/: Cargo.toml
backend/crates/fhirpath/benches/: fp_performance.rs
backend/crates/fhirpath/src/: error.rs  lib.rs
backend/crates/generated-ops/: Cargo.toml
backend/crates/generated-ops/src/: lib.rs
backend/crates/hl7v2/: Cargo.toml
backend/crates/hl7v2/src/: parser.rs
backend/crates/indexing-worker/: Cargo.toml
backend/crates/indexing-worker/src/: lib.rs  main.rs
backend/crates/jwt/: Cargo.toml
backend/crates/jwt/src/: claims.rs  lib.rs  reflect.rs  scopes.rs  sqlx.rs
backend/crates/lambda-test/: Cargo.toml
backend/crates/macro-loads/: Cargo.toml
backend/crates/macro-loads/src/: lib.rs
backend/crates/reflect/: Cargo.toml
backend/crates/reflect-derive/: Cargo.toml
backend/crates/reflect-derive/src/: lib.rs
backend/crates/reflect/src/: derive.rs  lib.rs  primitives.rs  traits.rs
backend/crates/repository/: Cargo.toml
backend/crates/repository/.sqlx/: query-0548b527810d0d9fc48b0f856e557f5df81e6697e69646fd102ea4a79ee952fb.json  query-09b543cd7c2af9a3e25dbd8a0cd25296bd27a6f40001378e74ae4acfd1baf246.json  query-0d1ac799e409d20c061e30023ab4806766e27dfc0782be5bf9d2110e4826021d.json  query-12095c36a191b4a021ad9cc3d787d80c55007a30c2e5bc173b1e8803ef9b3dcb.json  query-1fd2b6f174e3eaaea682c263bcc36c38c909d41a3d69773f198d7ea15ff9c34d.json  (+29 more)
backend/crates/repository/src/: admin.rs  fhir.rs  lib.rs  (+1 more)
backend/crates/server/: Cargo.toml  build.rs  package-lock.json  package.json
backend/documentation/: book.toml
backend/documentation/src/: SUMMARY.md
backend/scripts/: operation_build.sh  types_build.sh
backend/src/: main.rs
backend/src/commands/: api.rs  codegen.rs  config.rs  fhirpath.rs  mod.rs  server.rs  worker.rs
backend/wrangler/: rust-book.wrangler.jsonc
crates/artifacts/: Cargo.toml
crates/artifacts/src/: search_parameters.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  traversal.rs  utilities.rs
crates/fhir-client/: Cargo.toml
crates/fhir-client/src/: axum.rs  http.rs  lib.rs  middleware.rs  request.rs  test_impl.rs  url.rs
crates/fhir-model/: Cargo.toml
crates/fhir-model/benches/: serialization_bench.rs
crates/fhir-model/src/: lib.rs
crates/fhir-operation-error/: Cargo.toml
crates/fhir-operation-error/src/: axum.rs  derive.rs  lib.rs
crates/fhir-search/: Cargo.toml
crates/fhir-search/src/: indexing_conversion.rs  lib.rs
crates/fhirpath/: Cargo.toml
crates/fhirpath/benches/: fp_performance.rs
crates/fhirpath/src/: lib.rs  parser.rs
crates/indexing-worker/: Cargo.toml
crates/indexing-worker/.sqlx/: query-008a5ea8be73bb442628f33d4ddc7085e00347b08b1edcd2c55a59b23b510fdf.json  query-3353e540b8650e621d41616bede44455ed00ba4d60646cbba4351768be58369d.json  query-61ca77e13f3accbc29f986ab28b42a4f8f37cb6ed4bc8b0a9d8bb470d145b7e9.json  query-a0a71e472cca3c16645cb6d4a82cedccea7960c2aad8cd5167aede43130e7ef3.json  query-e91c382ef22a0d3f20633549a9e944d10e28d1b2614d46a6cc0f7f4c755d47cb.json
crates/indexing-worker/src/: conversion.rs  lib.rs  main.rs
crates/server/: Cargo.toml
crates/server/.sqlx/: query-100e187ed893d9ebb1ffca21560213735841d4215231d0d5541d33405c5a82d5.json  query-186d7c20ec021f2ac930ebcd98c1d5a221bc7f6cb6d42935730b42832e37c0a0.json  query-3011c123551d1d9ac6593b690a9cbc1082a52c4e47624387f23b18fa89e48256.json  query-944948662bc1f82f0aec4e4f854073d1b2f5a48c6ba3e829f4e307b1b31eca7f.json  query-9d5ef5f9c32430e5a0937bcc494c6cb3be0ecb212391b0dc0878029ce5211c14.json
crates/server/benchmarks/: patient-read.lua
crates/server/migrations/: 20250719151840_init_schema.sql  20250728165651_indexing_pos_mig.sql  20250728225517_fk_resource.sql  20250801192335_tenant_sequence_col.sql  20250811212644_user_table.sql  20250811233547_authorization_codes.sql  20250813183026_project_schema.sql  20250814210000_rename_column.sql
crates/server/public/: hello.txt
crates/server/src/: lib.rs  main.rs  pg.rs
(+606 files in other folders)
