[package]
name = "oxidized-health"
version = "0.1.0"
edition = "2024"

# [profile.release]
# strip = true    # Automatically strip symbols from the binary.
# opt-level = "z" # Optimize for size in release builds.

[workspace]
resolver = "3"
members = [
    "crates/server",
    "crates/fhirpath",
    "crates/cli",
    "crates/codegen",
    "crates/reflect",
    "crates/reflect-derive",
    "crates/fhir-model",
    "crates/fhir-serialization-json",
    "crates/fhir-serialization-json-derive",
    "crates/fhir-client",
    "crates/fhir-operation-error",
    "crates/fhir-operation-error-derive",
    "crates/indexing-worker",
    "crates/config",
    "crates/artifacts",
    "crates/fhir-search",
    "crates/repository",
    "crates/macro-loads",
    "crates/fhir-generated-ops",
    "crates/fhir-terminology",
    "crates/fhir-ops",
    "crates/fhir-ops-derive",
    "crates/access-control",
    "crates/jwt",
]

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3"
