[package]
name = "oxidized-artifacts"
version = "0.1.0"
edition = "2024"
include = ["/src", "/artifacts", "!.DS_Store"]

[dependencies]
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
once_cell = "1.21.3"
