[package]
name = "fhir-client"
version = "0.1.0"
edition = "2024"

[features]
http = ["dep:reqwest"]

[dependencies]
fhir-serialization-json = { path = "../fhir-serialization-json" }
fhir-model = { path = "../fhir-model" }
reqwest = { version = "0.12", optional = true }
http = "1.3.1"
json-patch = "4.0.0"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["rt", "macros"] }
