[package]
name = "oxidized-fhir-model"
version = "0.1.0"
edition = "2024"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
oxidized-fhir-datetime = { path = "../fhir-datetime" }
oxidized-reflect = { path = "../reflect", features = ["derive"] }
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
    "derive",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", optional = true }
