[package]
name = "oxidized-fhir-model"
version = "0.1.0"
edition = "2024"

[features]
sqlx = ["dep:sqlx"]

[[bench]]
name = "serialization_bench"
harness = false


[dependencies]
oxidized-reflect = { path = "../reflect", features = ["derive"] }
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
    "derive",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
sqlx = { version = "0.8.6", optional = true }
once_cell = "1.21.3"
regex = "1.11.1"
chrono = "0.4.41"

[dev-dependencies]
criterion = "0.7"
