[package]
name = "server"
version = "0.1.0"
edition = "2024"


[dependencies]
fhirpath = { path = "../fhirpath" }
fhir-model = { path = "../fhir-model" }
fhir-serialization-json = { path = "../fhir-serialization-json" }
fhir-client = { path = "../fhir-client", features = ["axum"] }
reflect = { path = "../reflect", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
axum = "0.8.4"
jsonwebtoken = "9.3.1"
sqlx-postgres = "0.8.6"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
rand = "0.9.1"
axum-extra = { version = "0.10.1", features = ["typed-routing"] }
tower-http = { version = "0.6.6", features = ["fs"] }
maud = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
