[package]
name = "haste-access-control"
version = "0.1.1"
edition = "2024"

[dependencies]
haste-fhir-client = { path = "../fhir-client" }
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath" }
haste-jwt = { path = "../jwt", features = ["reflect"] }
haste-reflect = { path = "../reflect", features = ["derive"] }
