[package]
name = "haste-access-control"
version = { workspace = true }
edition = { workspace = true }
description = "Access control utilities for Haste Health FHIR server and clients."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-client = { path = "../fhir-client" }
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath" }
haste-jwt = { path = "../jwt", features = ["reflect"] }
haste-reflect = { path = "../reflect", features = ["derive"] }
