[package]
name = "haste-artifacts"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
rust-embed = { version = "8.9.0", features = [
    "compression",
    "include-exclude",
] }
