[package]
name = "haste-artifacts"
version = "0.1.1"
edition = "2024"
description = "FHIR artifacts for Haste Health."
license = "GPL-3.0"
homepage = "https://haste.health"

[dependencies]
once_cell = "1.21.3"
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
rust-embed = { version = "8.9.0", features = [
    "compression",
    "include-exclude",
] }
