[package]
name = "haste-artifacts"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR artifacts for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
once_cell = "1.21.3"
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
rust-embed = { version = "8.9.0", features = [
    "compression",
    "include-exclude",
] }
