[package]
name = "oxidized-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
oxidized-fhirpath = { path = "../fhirpath" }
oxidized-codegen = { path = "../codegen" }
oxidized-fhir-operation-error = { path = "../fhir-operation-error" }
thiserror = "2.0.12"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
quote = "1.0.40"
