[package]
name = "haste-codegen"
version = "0.1.1"
edition = "2024"
description = "Code generation utilities for Haste Health FHIR server and clients."
license = "GPL-3.0"
homepage = "https://haste.health"

[dependencies]
indexmap = "2.10.0"
once_cell = "1.21.3"
haste-fhir-generated-ops = { path = "../fhir-generated-ops" }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error" }
haste-fhir-serialization-json = { path = "../fhir-serialization-json" }
haste-fhir-terminology = { path = "../fhir-terminology" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
serde_json = "1.0.140"
walkdir = "2.5.0"
