[package]
name = "haste-config"
version = "0.1.1"
edition = "2024"
description = "Configuration utilities for Haste Health FHIR server and clients."
license = "GPL-3.0"
homepage = "https://haste.health"

[dependencies]
dotenvy = "0.15.7"
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
tracing = "0.1.41"
