[package]
name = "haste-config"
version = { workspace = true }
edition = { workspace = true }
description = "Configuration utilities for Haste Health FHIR server and clients."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
dotenvy = "0.15.7"
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
tracing = "0.1.41"
