[package]
name = "oxidized-fhir-client"
version = "0.1.0"
edition = "2024"

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dependencies]
axum = { version = "0.8.4", optional = true }
http = "1.3.1"
json-patch = "4.0.0"
oxidized-fhir-model = { path = "../fhir-model" }
oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
oxidized-jwt = { path = "../jwt" }
reqwest = { version = "0.12", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["rt", "macros"] }
