[package]
name = "haste-fhir-generated-ops"
version = { workspace = true }
edition = { workspace = true }
description = "Generated FHIR operations for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error" }
haste-fhir-ops = { path = "../fhir-ops", features = ["derive"] }
