[package]
name = "haste-fhir-generated-ops"
version = { workspace = true }
edition = { workspace = true }
description = "Generated FHIR operations for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhir-ops = { path = "../fhir-ops", version = "0.*", features = [
    "derive",
] }
