[package]
name = "haste-fhir-model"
version = "0.1.1"
edition = "2024"
description = "FHIR data model for Haste Health."
license = "GPL-3.0"
homepage = "https://haste.health"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
haste-fhir-serialization-json = { path = "../fhir-serialization-json", features = [
    "derive",
] }
haste-reflect = { path = "../reflect", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", optional = true, features = ["postgres"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "serialization_bench"
harness = false
