[package]
name = "haste-fhir-operation-error-derive"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR operation error derive macros."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
