[package]
name = "haste-fhir-operation-error"
version = "0.1.1"
edition = "2024"

[features]
derive = ["dep:haste-fhir-operation-error-derive"]
axum = ["dep:axum", "dep:haste-fhir-serialization-json"]

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", optional = true }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error-derive = { path = "../fhir-operation-error-derive", optional = true }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", optional = true }
tracing = "0.1.41"
