[package]
name = "haste-fhir-ops-derive"
version = "0.1.1"
edition = "2024"
description = "Haste Health FHIR operations derive macros."
license = "GPL-3.0"
homepage = "https://haste.health"

[lib]
proc-macro = true

[dependencies]
haste-fhir-model = { path = "../fhir-model" }
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.104"
