[package]
name = "haste-fhir-ops"
version = "0.1.1"
edition = "2024"

[features]
derive = ["dep:haste-fhir-ops-derive"]

[dependencies]
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error" }
haste-fhir-ops-derive = { path = "../fhir-ops-derive", optional = true }
haste-jwt = { path = "../jwt" }
