[package]
name = "haste-fhir-ops"
version = "0.1.1"
edition = "2024"
description = "Haste Health FHIR operations library."
license = "GPL-3.0"
homepage = "https://haste.health"

[features]
derive = ["dep:haste-fhir-ops-derive"]

[dependencies]
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error" }
haste-fhir-ops-derive = { path = "../fhir-ops-derive", optional = true }
haste-jwt = { path = "../jwt" }
