[package]
name = "haste-fhir-ops"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR operations library."
license = { workspace = true }
homepage = { workspace = true }

[features]
derive = ["dep:haste-fhir-ops-derive"]

[dependencies]
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error" }
haste-fhir-ops-derive = { path = "../fhir-ops-derive", optional = true }
haste-jwt = { path = "../jwt" }
