[package]
name = "oxidized-fhir-search"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
elasticsearch = "9.0.0-alpha.1"
oxidized-artifacts = { path = "../artifacts" }
oxidized-fhir-client = { path = "../fhir-client" }
oxidized-fhir-model = { path = "../fhir-model" }
oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
oxidized-fhirpath = { path = "../fhirpath" }
oxidized-jwt = { path = "../jwt" }
oxidized-reflect = { path = "../reflect" }
oxidized-repository = { path = "../repository" }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
