[package]
name = "haste-fhir-search"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
elasticsearch = "9.0.0-alpha.1"
haste-artifacts = { path = "../artifacts" }
haste-fhir-client = { path = "../fhir-client" }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhirpath = { path = "../fhirpath" }
haste-jwt = { path = "../jwt" }
haste-reflect = { path = "../reflect" }
haste-repository = { path = "../repository" }
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
