[package]
name = "haste-fhir-serialization-json-derive"
version = "0.1.1"
edition = "2024"
description = "FHIR JSON serialization derive macros for Haste Health."
license = "GPL-3.0"
homepage = "https://haste.health"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
