[package]
name = "haste-fhir-serialization-json"
version = "0.1.1"
edition = "2024"
description = "FHIR JSON serialization utilities for Haste Health."
license = "GPL-3.0"
homepage = "https://haste.health"

[features]
derive = ["dep:haste-fhir-serialization-json-derive"]

[dependencies]
haste-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", optional = true }
serde_json = "1.0.140"
thiserror = "2.0.12"
