[package]
name = "haste-fhir-serialization-json"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR JSON serialization utilities for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[features]
derive = ["dep:haste-fhir-serialization-json-derive"]

[dependencies]
haste-fhir-serialization-json-derive = { path = "../fhir-serialization-json-derive", optional = true }
serde_json = "1.0.140"
thiserror = "2.0.12"
