[package]
name = "haste-fhir-terminology"
version = "0.1.1"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
haste-fhir-client = { path = "../fhir-client" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops" }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search" }
haste-jwt = { path = "../jwt" }
haste-repository = { path = "../repository" }
