[package]
name = "haste-fhir-terminology"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR terminology services library."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
dashmap = "6.1.0"
haste-fhir-client = { path = "../fhir-client" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops" }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search" }
haste-jwt = { path = "../jwt" }
haste-repository = { path = "../repository" }
