[package]
name = "oxidized-fhirpath"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "fp_performance"
harness = false

[dependencies]
oxidized-reflect = { path = "../reflect" }
oxidized-fhir-model = { path = "../fhir-model" }
peg = "0.8.5"
jiff = "0.2.15"
thiserror = "2.0.12"
once_cell = "1.21.3"
dashmap = "6.1.0"

[dev-dependencies]
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }
oxidized-reflect-derive = { path = "../reflect-derive" }
insta = "1.43.1"
criterion = "0.7"
