[package]
name = "oxidized-fhirpath"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
jiff = "0.2.15"
once_cell = "1.21.3"
oxidized-fhir-model = { path = "../fhir-model" }
oxidized-reflect = { path = "../reflect" }
oxidized-reflect-derive = { path = "../reflect-derive" }
peg = "0.8.5"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7"
insta = "1.43.1"
oxidized-fhir-serialization-json = { path = "../fhir-serialization-json" }

[[bench]]
name = "fp_performance"
harness = false
