[package]
name = "haste-fhirpath"
version = "0.1.1"
edition = "2024"
description = "Haste Health FHIRPath evaluation library."
license = "GPL-3.0"
homepage = "https://haste.health"

[dependencies]
dashmap = "6.1.0"
jiff = "0.2.15"
once_cell = "1.21.3"
haste-fhir-model = { path = "../fhir-model" }
haste-reflect = { path = "../reflect" }
haste-reflect-derive = { path = "../reflect-derive" }
peg = "0.8.5"
thiserror = "2.0.12"

[dev-dependencies]
criterion = "0.7"
insta = "1.43.1"
haste-fhir-serialization-json = { path = "../fhir-serialization-json" }

[[bench]]
name = "fp_performance"
harness = false
