[package]
name = "oxidized-indexing-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
elasticsearch = "9.0.0-alpha.1"
oxidized-config = { path = "../config" }
oxidized-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
oxidized-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
oxidized-fhir-search = { path = "../fhir-search" }
oxidized-fhirpath = { path = "../fhirpath" }
oxidized-jwt = { path = "../jwt" }
oxidized-repository = { path = "../repository" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
sqlx-postgres = "0.8.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
