[package]
name = "haste-indexing-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
elasticsearch = "9.0.0-alpha.1"
haste-config = { path = "../config" }
haste-fhir-model = { path = "../fhir-model", features = ["sqlx"] }
haste-fhir-operation-error = { path = "../fhir-operation-error", features = [
    "derive",
] }
haste-fhir-search = { path = "../fhir-search" }
haste-fhirpath = { path = "../fhirpath" }
haste-jwt = { path = "../jwt" }
haste-repository = { path = "../repository" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
sqlx-postgres = "0.8.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
